--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,127 @@
+/*fonts and sizes*/
+
+.lato{
+  font-family: 'Lato', sans-serif;
+}
+.font-15{
+  font-size: 15px;
+}
+.font-16{
+  font-size: 16px;
+}
+.font-17{
+  font-size: 17px;
+}
+.font-18{
+  font-size: 18px;
+}
+.font-19{
+  font-size: 19px;
+}
+
+/*colors*/
+.red{
+  color: red;
+}
+
+
+/*padding*/
+
+.pad-bot10{
+  padding-bottom: 10px;
+}
+
+
+.box-body dd{
+  padding-bottom: 10px;
+  font-weight: lighter;
+}
+
+.box-body dt{
+  text-align: left;
+}
+
+
+
+
+/*Printed view design*/
+
+#republic{
+  text-align: center;
+  font-size: 18px;
+  font-weight: bolder;
+}
+#republic h5{
+  padding-top: 0px;
+}
+
+#logoleft{
+  float: left;
+}
+#logoright{
+  float: right;
+}
+
+
 .kk{
-	border:2px solid red;
+  border:2px solid red;
+}
+.kb{
+	border:1px solid #5bc0de;
+}
+
+
+
+
+#user_picture {
+  padding-top: 50px;
+}
+
+#content-margin-top{
+  margin-top: 50px;
+}
+@media only screen and (max-width: 786px){
+  #user_picture {
+    padding-top: 0;
+  }
+  #content-margin-top{
+  margin-top: 0;
+}
+
+}
+
+#body_ng_user{
+  /*margin-top: 60px;*/
 }
 
 #picture{
   position: relative;
-  margin: 20px auto 0;
-  width: 150px;
-  height: 150px;
+  margin:0 auto;
+  width: 130px;
+  height: 130px;
 }
+
+#picture i{
+  position: relative;
+  top: 130px;
+  left: 95px;
+  z-index: 1;
+
+}
+
+#user_picture p{
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 21px;
+  margin-top: 32px;
+  width: 100%;
+}
+
 .thumbnailImage{
   display: block;
   position: relative;
   width: 100%;
-}
-
-#button1 {
-  z-index: 1;
-  position: absolute;
-  left: 0px;
-  top: 0px;
+  border:4px solid #fff;
 }
 
 
