--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,8 +21,15 @@
 
 /*colors*/
 .red{
-  color: red;
+  color: #B94A48;
 }
+.bgRed{
+  background-color: red;
+}
+.borderRed{
+  border-color: red;
+}
+
 
 
 /*padding*/
